# majorproject-viswam-ai

./: .gitattributes  .gitignore  CHANGELOG  CONTRIBUTING.md  LICENSE  README.md  REPORT.md  app.py  db.py  detection.py  farmer_data.db  main.py  mock_weather.json  ollama_backend.py  pyproject.toml  requirements.txt  txt  voice_assistant.py
.devcontainer/: devcontainer.json
.gitlab/: merge_request_template.md
components/: Assistant.py  __init__.py  crop_suggestion.py  disease_detection.py  feedback_button.py  feedback_page.py  home.py  profit_calculator.py  record_keeping.py  translator.py  weather_crop_planner.py
data/: crop_data.json
pages/: disease_detection.py  home.py  record_keeping.py  weather_crop_planner.py
