[project]
name = "team-project-farmin-ai"
version = "0.1.0"
description = "A smart farming assistant"
requires-python = ">=3.10"

dependencies = [
    "requests-oauthlib==2.0.0",
    "rich==13.9.4",
    "rpds-py==0.27.0",
    "rsa==4.9.1",
    "setuptools==80.9.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sounddevice==0.5.2",
    "soupsieve==2.7",
    "speechrecognition==3.14.3",
    "streamlit==1.24.0",
    "tenacity==8.5.0",
    "tensorboard==2.13.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.13.0",
    "tensorflow-estimator==2.13.0",
    "tensorflow-intel==2.13.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "termcolor==3.1.0",
    "toml==0.10.2",
    "toolz==1.0.0",
    "tornado==6.5.2",
    "typing-extensions==4.5.0",
    "tzdata==2025.2",
    "tzlocal==4.3.1",
    "urllib3==2.5.0",
    "validators==0.35.0",
    "watchdog==6.0.0",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.2",
    "zipp==3.23.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
