[project]
name = "team-project-farmin-ai"
version = "0.1.0"
description = "A smart farming assistant"
authors = [
    { name = "Vishnu Vardhan", email = "vishnuvardhancv128@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "requests-oauthlib",
    "rich",
    "rpds-py",
    "rsa",
    "setuptools",
    "six",
    "smmap",
    "sounddevice",
    "soupsieve",
    "speechrecognition",
    "streamlit",
    "tenacity",
    "tensorboard",
    "tensorboard-data-server",
    "tensorflow",
    "tensorflow-estimator",
    "tensorflow-intel",
    "tensorflow-io-gcs-filesystem",
    "termcolor",
    "toml",
    "toolz",
    "tornado",
    "typing-extensions",
    "tzdata",
    "tzlocal",
    "urllib3",
    "validators",
    "watchdog",
    "werkzeug",
    "wheel",
    "wrapt",
    "zipp"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
